--- a/src/views/Payment/style.scss
+++ b/src/views/Payment/style.scss
@@ -59,6 +59,7 @@
                     height: 110px;
                     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
                     border-radius: 10px;
+                    cursor: pointer;
 
                     img {
                         width: 100%;
