--- a/src/views/Planning/style.scss
+++ b/src/views/Planning/style.scss
@@ -18,6 +18,17 @@
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         border-radius: 3px;
         padding: 10px;
+        position: relative;
+
+        .map-overlay-inner-label {
+            .map-overlay-inner-icon {
+                font-size: 12px;
+                cursor: pointer;
+                position: absolute;
+                top: 5px;
+                right: 5px;
+            }
+        }
     }
 
     label {
@@ -41,4 +52,10 @@
     position: absolute;
     right: 10%;
     top: 25%;
+}
+
+@media screen and (max-width: 425px) {
+    .map-overlay {
+        width: 60% !important;
+    }
 }
