--- a/src/components/ModalInstruction/style.scss
+++ b/src/components/ModalInstruction/style.scss
@@ -11,6 +11,6 @@
 
 @media screen and (max-width: 425px) {
     #modal-instruction {
-        width: 90vw;
+        width: 90vw !important;
     }
 }
