--- a/src/components/ProtectedRoute/style.scss
+++ b/src/components/ProtectedRoute/style.scss
@@ -2,3 +2,10 @@
     padding-top: 65px;
     height: calc(100vh - 60px);
 }
+
+.notfound-image {
+    img {
+        width: 300px;
+        height: 300px;
+    }
+}
